Update CMakeList for working with new Geant4, ROOT6 and c++14
Update the CMakeList to build the simulation code with the new
Geant4 (10.02), ROOT6 (6.06) and VGM (4.3), previous Geant4, ROOT
and VGM version still supported. Take care of the new pcm file
from the ROOT6 dictionary generation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,35 +6,43 @@
 cmake_minimum_required(VERSION 2.8.3 FATAL_ERROR)
 project(HYPHIFRS_MC)
 
+SET(CMAKE_VERBOSE_MAKEFILE ON)
+
 include(CheckCXXCompilerFlag)
+set(HAVE_ISYSTEM true)
+
+set (CMAKE_CXX_STANDARD 14)
 #SET(CPP_STANDARD c++14)
 
-SET(Geant4VMC_DIR $ENV{G4VMC}/lib/Geant4VMC-3.1.1)
-SET(MTRoot_DIR $ENV{G4VMC}/lib/MTRoot-3.1.1)
-SET(VGM_DIR $ENV{VGM_INSTALL}/lib/VGM-4.2.0)
+#SET(Geant4VMC_DIR $ENV{G4VMC}/lib/Geant4VMC-3.1.1)
+#SET(MTRoot_DIR $ENV{G4VMC}/lib/MTRoot-3.1.1)
+SET(VGM_INSTALL $ENV{VGM_INSTALL})#/lib/VGM-4.3.0)
+SET(Geant4_DIR $ENV{GEANT4_DIR})
+SET(ROOT_DIR $ENV{ROOTSYS})
 
+if(${VGM_INSTALL} MATCHES 4\\.2)
+  set(VGM_DIR ${VGM_INSTALL}/lib/VGM-4.2.0)
+  message(STATUS "VGM dir 4.2:" ${VGM_DIR})
+elseif(${VGM_INSTALL} MATCHES 4\\.3)
+  set(VGM_DIR ${VGM_INSTALL}/lib/VGM-4.3.0)
+  message(STATUS "VGM dir 4.3:" ${VGM_DIR})
+else()
+  message(STATUS "no match for VGM version" ${VGM_INSTALL})
+endif()
 
 #----------------------------------------------------------------------------
 # Set path to Find modules in VGM
 #
 set(CMAKE_MODULE_PATH 
-  ${Geant4VMC_DIR}/Modules
+#  ${ROOT_DIR}/etc/cmake
   ${VGM_DIR}/Modules
+#  ${Geant4VMC_DIR}/Modules
   ${CMAKE_MODULE_PATH}) 
 
-message(STATUS ${CMAKE_MODULE_PATH})
-#----------------------------------------------------------------------------
-# Find VGM package
-if (NOT VGM_FOUND)
-  find_package(VGM REQUIRED)
-endif()
-
-
-include(UseVMC)
-
-#----------------------------------------------------------------------------
-# Find ROOT package
-find_package(ROOT REQUIRED)
+message(STATUS "CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH})
+message(STATUS "PATH: " $ENV{PATH})
+message(STATUS "EXT VAR: " $ENV{ROOTSYS} $ENV{Geant4_DIR})
+message(STATUS "LD: " $ENV{LD_LIBRARY_PATH})
 
 #----------------------------------------------------------------------------
 # Find Geant4 package, activating all available UI and Vis drivers by default
@@ -48,6 +56,24 @@ else()
   find_package(Geant4 REQUIRED)
 endif()
 
+#include(${Geant4_USE_FILE})
+#----------------------------------------------------------------------------
+# Find ROOT package
+find_package(ROOT REQUIRED)
+#include(${ROOT_USE_FILE})
+
+message(STATUS "ROOT Config :" ${ROOT_USE_FILE})
+#----------------------------------------------------------------------------
+# Find VGM package
+#if (NOT VGM_FOUND)
+find_package(VGM REQUIRED)
+#endif()
+
+
+#include(UseVMC)
+message(STATUS "UseFile:" ${Geant4_USE_FILE} " " ${CMAKE_CURRENT_LIST_DIR})
+
+
 #----------------------------------------------------------------------------
 # Setup Geant4 include directories and compile definitions
 # Setup include directory for this project
@@ -56,6 +82,7 @@ include(${Geant4_USE_FILE})
 include_directories(${PROJECT_SOURCE_DIR}/include
                     ${PROJECT_SOURCE_DIR}/FairBase  
                     ${Geant4_INCLUDE_DIR}
+		    $ENV{GEANT4_DIR}/include/Geant4
                     ${ROOT_INCLUDE_DIRS}
                     ${VGM_INCLUDE_DIRS})
 
@@ -75,6 +102,7 @@ set(library_name vmc_${PROJECT_NAME})
 add_executable(HypHIFRS_MC HypHIFRS_MC.cc ${sources} ${headers})
 target_link_libraries(HypHIFRS_MC -L${PROJECT_SOURCE_DIR}/FairBase -lHyphiFairBase ${library_name} ${VGM_LIBRARIES} ${ROOT_LIBRARIES} ${Geant4_LIBRARIES})
 
+message(STATUS "Current dir :" ${CMAKE_CURRENT_SOURCE_DIR})
 
 ROOT_GENERATE_DICTIONARY(
   ${CMAKE_SHARED_LIBRARY_PREFIX}${library_name}
@@ -82,7 +110,8 @@ ROOT_GENERATE_DICTIONARY(
   ${CMAKE_CURRENT_SOURCE_DIR}/include/THypHi_Par.hh
   ${CMAKE_CURRENT_SOURCE_DIR}/include/THypHi_UTrackerHit.hh
   ${CMAKE_CURRENT_SOURCE_DIR}/include/THypHi_Event.hh
-  LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/include/THypHi_linkdef.h)
+  LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/include/THypHi_LinkDef.h
+  )
 
 set(SourceLib ${PROJECT_SOURCE_DIR}/src/THypHi_Par.cc ${PROJECT_SOURCE_DIR}/src/THypHi_Event.cc ${PROJECT_SOURCE_DIR}/src/THypHi_UTrackerHit.cc)
 
