Add ignore pattern
Add more ignore pattern in the project directory

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,21 @@
 *gz
 *debug
 *log*
+*.root
+build/
+build10/
+build11/
+build12/
+build13/
+build7/
+build8/
+build9/
+buildNew/
+buildTT/
+buildTest/
+buildtest/
+temp/
+\.dir-locals\.el
+field/
+
+FairBase
